# hermes-pipeline-plugin

./: .gitignore  .mailmap  AGENTS.md  ARCHITECTURE-FIXES.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.json  BUG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  ENSEMBLE-ARCHITECTURE.md  PLAN.md  PLAN2.md  PLAN3.md  README.md  SECURITY.md  TASKS2.md  __init__.py  _ctx.py  analysis_output.json  audit_snapshot_post_20260720_121907.json  audit_snapshot_pre_20260720_121148.json  bug.md  classify.py  code_review_results.json  config.tractor.yaml  config.yaml  convergence.py  crg-pipeline-architecture.mermaid.md  ensemble.py  kanban.py  kanban_adapter.py  kanban_common.py  kanban_legacy.py  models.py  pipeline-architecture-detailed.html  pipeline.config.yaml.example  plugin.yaml  pyproject.toml  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
agents/: analyst.prompt  architect.prompt  coder.prompt  debugger.prompt  devops.prompt  documenter.prompt  finder.prompt  fixer.prompt  integration.prompt  judge.prompt  optimizer.prompt  planner.prompt  quality.prompt  refactorer.prompt  researcher.prompt  reviewer.prompt  security.prompt  tester.prompt
handlers/: __init__.py
reports/: graph_snapshot_crg.json  pipeline_audit_summary.md
research/: best_practices_findings.json  multi-agent-patterns-report.md
tests/: __init__.py  test_classify.py  test_convergence_edge.py  test_delegation_contract.py  test_ensemble.py  test_handlers.py  test_init.py  test_kanban_adapter.py  test_kanban_convergence.py  test_kanban_edge.py  test_kanban_integration.py  test_kanban_router.py  (+4 more)
(+13 files in other folders)
