[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "E501", "N999", "BLE001", "ARG001"]
"classify.py" = ["F401", "RUF001"]
"tests/*.py" = ["S101", "RUF001"]
